TM/lab3/gen/FormattingParser.java
// Generated from C:/Projects/MT/lab3/src/Formatting.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FormattingParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, FOR=2, WHILE=3, RETURN=4, CLASS=5, INT=6, CHAR=7, BOOL=8, T=9, F=10, 
		INC=11, DEC=12, PLUS=13, MINUS=14, STAR=15, SLASH=16, EQ_OP=17, COMP_OP=18, 
		INV=19, OPEN_ROUND=20, CLOSE_ROUND=21, OPEN_FIGURED=22, CLOSE_FIGURED=23, 
		EQ=24, SC=25, CO=26, NUM=27, NAME=28, SYMBOL=29, WS=30;
	public static final int
		RULE_valExpr = 0, RULE_valTerm = 1, RULE_valFactor = 2, RULE_logExpr = 3, 
		RULE_logFactor = 4, RULE_logTerm = 5, RULE_charName = 6, RULE_expr = 7, 
		RULE_assignment = 8, RULE_initialization = 9, RULE_eq = 10, RULE_fIf = 11, 
		RULE_fFor = 12, RULE_fWhile = 13, RULE_constructions = 14, RULE_type = 15, 
		RULE_arg = 16, RULE_fReturn = 17, RULE_function = 18, RULE_fClass = 19, 
		RULE_start = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"valExpr", "valTerm", "valFactor", "logExpr", "logFactor", "logTerm", 
			"charName", "expr", "assignment", "initialization", "eq", "fIf", "fFor", 
			"fWhile", "constructions", "type", "arg", "fReturn", "function", "fClass", 
			"start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'for'", "'while'", "'return'", "'class'", "'int'", "'char'", 
			"'boolean'", "'true'", "'false'", "'++'", "'--'", "'+'", "'-'", "'*'", 
			"'/'", null, null, "'!'", "'('", "')'", "'{'", "'}'", "'='", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "FOR", "WHILE", "RETURN", "CLASS", "INT", "CHAR", "BOOL", 
			"T", "F", "INC", "DEC", "PLUS", "MINUS", "STAR", "SLASH", "EQ_OP", "COMP_OP", 
			"INV", "OPEN_ROUND", "CLOSE_ROUND", "OPEN_FIGURED", "CLOSE_FIGURED", 
			"EQ", "SC", "CO", "NUM", "NAME", "SYMBOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Formatting.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormattingParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValExprContext extends ParserRuleContext {
		public List<ValTermContext> valTerm() {
			return getRuleContexts(ValTermContext.class);
		}
		public ValTermContext valTerm(int i) {
			return getRuleContext(ValTermContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(FormattingParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(FormattingParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(FormattingParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(FormattingParser.MINUS, i);
		}
		public ValExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterValExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitValExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitValExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValExprContext valExpr() throws RecognitionException {
		ValExprContext _localctx = new ValExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_valExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			valTerm();
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				setState(49);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(43);
					match(PLUS);
					 System.out.print(" + "); 
					setState(45);
					valTerm();
					}
					break;
				case MINUS:
					{
					setState(46);
					match(MINUS);
					 System.out.print(" - "); 
					setState(48);
					valTerm();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValTermContext extends ParserRuleContext {
		public List<ValFactorContext> valFactor() {
			return getRuleContexts(ValFactorContext.class);
		}
		public ValFactorContext valFactor(int i) {
			return getRuleContext(ValFactorContext.class,i);
		}
		public List<TerminalNode> STAR() { return getTokens(FormattingParser.STAR); }
		public TerminalNode STAR(int i) {
			return getToken(FormattingParser.STAR, i);
		}
		public List<TerminalNode> SLASH() { return getTokens(FormattingParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(FormattingParser.SLASH, i);
		}
		public ValTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterValTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitValTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitValTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValTermContext valTerm() throws RecognitionException {
		ValTermContext _localctx = new ValTermContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_valTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			valFactor();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR || _la==SLASH) {
				{
				setState(61);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STAR:
					{
					setState(55);
					match(STAR);
					 System.out.print(" * "); 
					setState(57);
					valFactor();
					}
					break;
				case SLASH:
					{
					setState(58);
					match(SLASH);
					 System.out.print(" / "); 
					setState(60);
					valFactor();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValFactorContext extends ParserRuleContext {
		public Token num;
		public Token name;
		public TerminalNode OPEN_ROUND() { return getToken(FormattingParser.OPEN_ROUND, 0); }
		public ValExprContext valExpr() {
			return getRuleContext(ValExprContext.class,0);
		}
		public TerminalNode CLOSE_ROUND() { return getToken(FormattingParser.CLOSE_ROUND, 0); }
		public TerminalNode MINUS() { return getToken(FormattingParser.MINUS, 0); }
		public TerminalNode NUM() { return getToken(FormattingParser.NUM, 0); }
		public TerminalNode NAME() { return getToken(FormattingParser.NAME, 0); }
		public ValFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valFactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterValFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitValFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitValFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValFactorContext valFactor() throws RecognitionException {
		ValFactorContext _localctx = new ValFactorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_valFactor);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MINUS:
			case OPEN_ROUND:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case MINUS:
					{
					setState(66);
					match(MINUS);
					 System.out.print("-"); 
					}
					break;
				case OPEN_ROUND:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71);
				match(OPEN_ROUND);
				 System.out.print("("); 
				setState(73);
				valExpr();
				setState(74);
				match(CLOSE_ROUND);
				 System.out.print(")"); 
				}
				break;
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((ValFactorContext)_localctx).num = match(NUM);
				 System.out.print((((ValFactorContext)_localctx).num!=null?((ValFactorContext)_localctx).num.getText():null)); 
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				((ValFactorContext)_localctx).name = match(NAME);
				 System.out.print((((ValFactorContext)_localctx).name!=null?((ValFactorContext)_localctx).name.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogExprContext extends ParserRuleContext {
		public Token op;
		public List<LogFactorContext> logFactor() {
			return getRuleContexts(LogFactorContext.class);
		}
		public LogFactorContext logFactor(int i) {
			return getRuleContext(LogFactorContext.class,i);
		}
		public List<TerminalNode> EQ_OP() { return getTokens(FormattingParser.EQ_OP); }
		public TerminalNode EQ_OP(int i) {
			return getToken(FormattingParser.EQ_OP, i);
		}
		public LogExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterLogExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitLogExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitLogExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogExprContext logExpr() throws RecognitionException {
		LogExprContext _localctx = new LogExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			logFactor();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EQ_OP) {
				{
				{
				setState(84);
				((LogExprContext)_localctx).op = match(EQ_OP);
				 System.out.print(" " + (((LogExprContext)_localctx).op!=null?((LogExprContext)_localctx).op.getText():null) + " "); 
				setState(86);
				logFactor();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogFactorContext extends ParserRuleContext {
		public Token name;
		public TerminalNode OPEN_ROUND() { return getToken(FormattingParser.OPEN_ROUND, 0); }
		public LogExprContext logExpr() {
			return getRuleContext(LogExprContext.class,0);
		}
		public TerminalNode CLOSE_ROUND() { return getToken(FormattingParser.CLOSE_ROUND, 0); }
		public TerminalNode INV() { return getToken(FormattingParser.INV, 0); }
		public TerminalNode T() { return getToken(FormattingParser.T, 0); }
		public TerminalNode F() { return getToken(FormattingParser.F, 0); }
		public TerminalNode NAME() { return getToken(FormattingParser.NAME, 0); }
		public LogTermContext logTerm() {
			return getRuleContext(LogTermContext.class,0);
		}
		public LogFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logFactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterLogFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitLogFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitLogFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogFactorContext logFactor() throws RecognitionException {
		LogFactorContext _localctx = new LogFactorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_logFactor);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INV:
			case OPEN_ROUND:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INV:
					{
					setState(92);
					match(INV);
					 System.out.print("!"); 
					}
					break;
				case OPEN_ROUND:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97);
				match(OPEN_ROUND);
				 System.out.print("("); 
				setState(99);
				logExpr();
				setState(100);
				match(CLOSE_ROUND);
				 System.out.print(")"); 
				}
				break;
			case T:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(T);
				 System.out.print("true"); 
				}
				break;
			case F:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				match(F);
				 System.out.print("false"); 
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				((LogFactorContext)_localctx).name = match(NAME);
				 System.out.print((((LogFactorContext)_localctx).name!=null?((LogFactorContext)_localctx).name.getText():null)); 
				setState(111);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COMP_OP:
					{
					setState(109);
					logTerm();
					}
					break;
				case EQ_OP:
				case CLOSE_ROUND:
				case SC:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogTermContext extends ParserRuleContext {
		public Token op;
		public Token name;
		public TerminalNode COMP_OP() { return getToken(FormattingParser.COMP_OP, 0); }
		public TerminalNode NAME() { return getToken(FormattingParser.NAME, 0); }
		public LogTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterLogTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitLogTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitLogTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogTermContext logTerm() throws RecognitionException {
		LogTermContext _localctx = new LogTermContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_logTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			((LogTermContext)_localctx).op = match(COMP_OP);
			setState(116);
			((LogTermContext)_localctx).name = match(NAME);
			 System.out.print(" " + (((LogTermContext)_localctx).op!=null?((LogTermContext)_localctx).op.getText():null) + " " + (((LogTermContext)_localctx).name!=null?((LogTermContext)_localctx).name.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharNameContext extends ParserRuleContext {
		public Token name;
		public Token ch;
		public TerminalNode NAME() { return getToken(FormattingParser.NAME, 0); }
		public TerminalNode SYMBOL() { return getToken(FormattingParser.SYMBOL, 0); }
		public CharNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterCharName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitCharName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitCharName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharNameContext charName() throws RecognitionException {
		CharNameContext _localctx = new CharNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_charName);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				((CharNameContext)_localctx).name = match(NAME);
				 System.out.print((((CharNameContext)_localctx).name!=null?((CharNameContext)_localctx).name.getText():null)); 
				}
				break;
			case SYMBOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				((CharNameContext)_localctx).ch = match(SYMBOL);
				 System.out.print((((CharNameContext)_localctx).ch!=null?((CharNameContext)_localctx).ch.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ValExprContext valExpr() {
			return getRuleContext(ValExprContext.class,0);
		}
		public LogExprContext logExpr() {
			return getRuleContext(LogExprContext.class,0);
		}
		public CharNameContext charName() {
			return getRuleContext(CharNameContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				valExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				logExpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				charName();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Token name;
		public TerminalNode NAME() { return getToken(FormattingParser.NAME, 0); }
		public TerminalNode EQ() { return getToken(FormattingParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode INC() { return getToken(FormattingParser.INC, 0); }
		public TerminalNode DEC() { return getToken(FormattingParser.DEC, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			((AssignmentContext)_localctx).name = match(NAME);
			 System.out.print((((AssignmentContext)_localctx).name!=null?((AssignmentContext)_localctx).name.getText():null)); 
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQ:
				{
				setState(132);
				match(EQ);
				 System.out.print(" = "); 
				setState(134);
				expr();
				}
				break;
			case INC:
				{
				setState(135);
				match(INC);
				 System.out.print("++"); 
				}
				break;
			case DEC:
				{
				setState(137);
				match(DEC);
				 System.out.print("--"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitializationContext extends ParserRuleContext {
		public Token name;
		public TerminalNode INT() { return getToken(FormattingParser.INT, 0); }
		public TerminalNode EQ() { return getToken(FormattingParser.EQ, 0); }
		public ValExprContext valExpr() {
			return getRuleContext(ValExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(FormattingParser.NAME, 0); }
		public TerminalNode BOOL() { return getToken(FormattingParser.BOOL, 0); }
		public LogExprContext logExpr() {
			return getRuleContext(LogExprContext.class,0);
		}
		public TerminalNode CHAR() { return getToken(FormattingParser.CHAR, 0); }
		public CharNameContext charName() {
			return getRuleContext(CharNameContext.class,0);
		}
		public InitializationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).enterInitialization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormattingListener ) ((FormattingListener)listener).exitInitialization(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormattingVisitor ) return ((FormattingVisitor<? extends T>)visitor).visitInitialization(this);
			else return visitor.visitChildren(this);
		}
	}
